--- a/frontend/src/splashpage.css
+++ b/frontend/src/splashpage.css
@@ -19,6 +19,12 @@ body {
     background: linear-gradient(180deg, #000000 0%, #ECF2FF 0.01%, #ECF2FF 100%);
 }
 
+#homePageBackground {
+    width: 100%;
+    height: 1024px;
+    background: #ECF2FF;
+}
+
 #box {
     box-sizing: border-box;
     position: absolute;
@@ -28,7 +34,7 @@ body {
     top: 150px;
 
     background: rgba(217, 217, 217, 0.78);
-    border: 1px solid #000000;
+    /* border: 1px solid #000000; */
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
 }
@@ -342,6 +348,12 @@ top: 200px;
     height: 236px;
 
     background: linear-gradient(180deg, #756060 81.46%, #ECF2FF 100%);
+}
+
+#appBar {
+    position: absolute;
+
+background: #756060;
 }
         
 
