fixed the styling for the AppBanner

--- a/frontend/src/splashpage.css
+++ b/frontend/src/splashpage.css
@@ -387,8 +387,12 @@ input {
 
 #appBar {
     position: absolute;
-
+    z-index: 5;
     background: #756060;
+}
+
+#toolBar{
+    padding-left: 0;
 }
 
 .sr-only {
