--- a/frontend/src/splashpage.css
+++ b/frontend/src/splashpage.css
@@ -8,6 +8,7 @@
     /* it was 115% before */
     background: linear-gradient(239.25deg, #ECF2FF -9.78%, #756060 16.21%, #756060 85.49%, #ECF2FF 110.24%);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    
 }
 
 body {
@@ -24,6 +25,7 @@ body {
 }
 
 #homePageBackground {
+    position: relative;
     width: 100%;
     height: 1024px;
     background: #ECF2FF;
@@ -41,6 +43,20 @@ body {
     /* border: 1px solid #000000; */
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
+}
+
+#publicBox {
+    box-sizing: border-box;
+    position: absolute;
+    width: 96%;
+    height: 85%;
+    left: 2%;
+    top: 10%;
+
+    background: rgba(217, 217, 217, 0.78);
+    /* border: 1px solid #000000; */
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px; 
 }
 
 img {
@@ -78,28 +94,35 @@ img {
     color: #000000;
 }
 
+#public {
+    position: absolute;
+    width: 40%;
+    left: 3%;
+    top: 1%;
+
+    font-family: 'Italiana', serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 3vw;
+    /* line-height: 59px; */
+    text-align: left;
+
+    color: #000000;
+}
+
 #line {
     position: absolute;
-    width: 40%;
-    min-height: 0px;
-    left: 30%;
-    top: 50%;
+    width: 0px;
+    height: 0px;
+    left: 3%;
+    top: 13%;
+    
+    border: 5px solid #000000;
+    border-right-width: 103px;
+    border-top-width: 1px;
 
-    border: 1px solid #ECF2FF;
-    transform: rotate(89.9deg);
-    transform-origin: center;
 }
 
-#line2 {
-    position: absolute;
-    width: 40%;
-    min-height: 0px;
-    left: 30%;
-    top: 55%;
-
-    border: 1px solid #000000;
-    transform: rotate(90deg);
-}
 
 section {
     position: absolute;
@@ -393,6 +416,7 @@ input {
 
 #toolBar{
     padding-left: 0;
+    padding-right: 0;
 }
 
 .sr-only {
