--- a/frontend/src/splashpage.css
+++ b/frontend/src/splashpage.css
@@ -49,7 +49,7 @@ body {
     box-sizing: border-box;
     position: absolute;
     width: 96%;
-    height: 85%;
+    height: 87%;
     left: 2%;
     top: 10%;
 
@@ -110,6 +110,53 @@ img {
     color: #000000;
 }
 
+#map-cards-list{
+    top: 18%;
+    left: 1.8%;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+#listItemMapCard {
+    height: 35%;
+    flex-basis: 1%; /* Set the width of each list item */
+    margin-bottom: 10px; /* Add some margin between list items */
+    padding: 10px;
+    margin-right: 5%;
+    word-break: break-word;
+}
+
+#cardTitle {
+    font-family: 'Italiana', serif;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 3vw;
+    text-align: left;
+    margin-left: 10px;
+    top: 2%;
+    white-space: nowrap;
+    white-space: normal;
+    display: block;
+    /* z-index: 1; */
+}
+
+#mapCard1 {
+    /* position: inherit; */
+    width: 257px;
+    height: 330px;
+    overflow: hidden;
+    background: #FFFFFF;
+    border-radius: 5px;
+    transition: background 0.5s ease, transform 0.5s ease;
+}
+
+#mapCard1:hover {
+    background: #ECF2FF;
+    transform: scale(1.05);
+}
+
 #line {
     position: absolute;
     width: 0px;
@@ -121,6 +168,33 @@ img {
     border-right-width: 103px;
     border-top-width: 1px;
 
+}
+
+#map-card-line {
+    position: relative;
+    width: 0px;
+    height: 0px;
+    left: 5%;
+    border: 5px solid #000000;
+    border-right-width: 103px;
+    border-top-width: 1px;
+}
+
+#map-card-author {
+    position: relative;
+    font-family: 'Italiana', serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 2.8vh;
+    left: 3%;
+    margin-bottom: 1%;
+}
+
+#map-card-image {
+    position: relative;
+    width: 250px;
+    height: 158.8px;
+    left: 1%;
 }
 
 
