--- a/frontend/src/splashpage.css
+++ b/frontend/src/splashpage.css
@@ -8,6 +8,7 @@
     /* it was 115% before */
     background: linear-gradient(239.25deg, #ECF2FF -9.78%, #756060 16.21%, #756060 85.49%, #ECF2FF 110.24%);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    
 }
 
 body {
@@ -24,6 +25,7 @@ body {
 }
 
 #homePageBackground {
+    position: relative;
     width: 100%;
     height: 1024px;
     background: #ECF2FF;
@@ -41,6 +43,20 @@ body {
     /* border: 1px solid #000000; */
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
+}
+
+#publicBox {
+    box-sizing: border-box;
+    position: absolute;
+    width: 96%;
+    height: 87%;
+    left: 2%;
+    top: 10%;
+
+    background: rgba(217, 217, 217, 0.78);
+    /* border: 1px solid #000000; */
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px; 
 }
 
 img {
@@ -78,28 +94,133 @@ img {
     color: #000000;
 }
 
+#public {
+    position: absolute;
+    width: 40%;
+    left: 3%;
+    top: 1%;
+
+    font-family: 'Italiana', serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 3vw;
+    /* line-height: 59px; */
+    text-align: left;
+
+    color: #000000;
+}
+
+#map-cards-list{
+    top: 18%;
+    left: 1.8%;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+#published-listItemMapCard {
+    height: 35%;
+    flex-basis: 1%; /* Set the width of each list item */
+    margin-bottom: 10px; /* Add some margin between list items */
+    padding: 10px;
+    margin-right: 5%;
+    word-break: break-word;
+}
+
+#unpublished-listItemMapCard {
+    height: 35%;
+    flex-basis: 1%; /* Set the width of each list item */
+    margin-bottom: 10px; /* Add some margin between list items */
+    padding: 10px;
+    margin-right: 5%;
+    word-break: break-word;
+}
+
+#cardTitle {
+    font-family: 'Italiana', serif;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 3vw;
+    text-align: left;
+    margin-left: 10px;
+    top: 2%;
+    white-space: nowrap;
+    white-space: normal;
+    display: block;
+    /* z-index: 1; */
+}
+
+#mapCard1 {
+    position: relative;
+    width: 257px;
+    height: 330px;
+    overflow: hidden;
+    background: #FFFFFF;
+    border-radius: 5px;
+    transition: background 0.8s ease, transform 0.5s ease;
+}
+
+#mapCard2 {
+    position: relative;
+    width: 257px;
+    height: 330px;
+    overflow: hidden;
+    background: #E7EDFA;
+    border-radius: 5px;
+    transition: background 0.8s ease, transform 0.5s ease;
+}
+
+#mapCard1:hover {
+    background: rgba(117, 96, 96, 0.75);
+    transform: scale(1.05);
+}
+
+#mapCard2:hover {
+    background: rgba(117, 96, 96, 0.75);
+    transform: scale(1.05);
+}
+
 #line {
     position: absolute;
-    width: 40%;
-    min-height: 0px;
-    left: 30%;
-    top: 50%;
+    width: 0px;
+    height: 0px;
+    left: 3%;
+    top: 13%;
+    
+    border: 5px solid #000000;
+    border-right-width: 103px;
+    border-top-width: 1px;
 
-    border: 1px solid #ECF2FF;
-    transform: rotate(89.9deg);
-    transform-origin: center;
 }
 
-#line2 {
-    position: absolute;
-    width: 40%;
-    min-height: 0px;
-    left: 30%;
-    top: 55%;
-
-    border: 1px solid #000000;
-    transform: rotate(90deg);
+#map-card-line {
+    position: relative;
+    width: 0px;
+    height: 0px;
+    left: 5%;
+    border: 5px solid #000000;
+    border-right-width: 103px;
+    border-top-width: 1px;
 }
+
+#map-card-author {
+    position: relative;
+    font-family: 'Italiana', serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 2.8vh;
+    left: 3%;
+    margin-bottom: 1%;
+}
+
+#map-card-image {
+    position: relative;
+    width: 250px;
+    height: 158.8px;
+    left: 1%;
+}
+
 
 section {
     position: absolute;
@@ -393,6 +514,7 @@ input {
 
 #toolBar{
     padding-left: 0;
+    padding-right: 0;
 }
 
 .sr-only {
@@ -411,4 +533,50 @@ input {
     align-items: center;
     font-size: 25pt;
     justify-content: center;
+}
+
+#modal-top{
+    position: absolute;
+    width: 423px;
+    height: 71px;
+    left: 0px;
+    top: 0px;
+    background: #756060;
+    border-radius: 1px;
+}
+
+#modal-heading{
+    font-family: 'Italiana';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 28px;
+    line-height: 21px;
+    color: #000000;
+}
+
+#modal-text{
+    font-family: 'Italiana';
+    font-weight: normal;
+    font-size: 15px;
+    color: #000000;
+}
+
+#modal-textfield{
+    width: 332px;
+    height: 4px;
+    background: #D9D9D9;
+    border-radius: 10px;
+}
+
+#modal-button{
+    width: 78px;
+    height: 27px;
+    background: #FDE66B;
+    font-family: 'Italiana';
+    font-weight: 600;
+    color: #000000;
+    font-size: 12px;
+    margin-left: 20px;
+    margin-right: 20px;
+    text-transform: none;
 }
