--- a/frontend/src/splashpage.css
+++ b/frontend/src/splashpage.css
@@ -59,6 +59,32 @@ body {
     border-radius: 5px; 
 }
 
+#mapBox{
+    box-sizing: border-box;
+    position: absolute;
+    width: 96%;
+    height: 50%;
+    left: 2%;
+    top: 10%;
+    background: rgba(217, 217, 217, 0.78);
+    /* border: 1px solid #000000; */
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px; 
+}
+
+#statusBox {
+    box-sizing: border-box;
+    position: absolute;
+    width: 96%;
+    height: 30%;
+    left: 2%;
+    top: 40%;
+}
+
+#mapContainer{
+    z-index: 0;
+}
+
 img {
     position: absolute;
     width: 111.26px;
@@ -527,56 +553,10 @@ input {
     top: 95%;
     width: 100%;
     height: 10%;
-    background-color: #d8e2dc;
+    background: rgba(217, 217, 217, 0.78);
     color: black;
     display: flex;
     align-items: center;
     font-size: 25pt;
     justify-content: center;
-}
-
-#modal-top{
-    position: absolute;
-    width: 423px;
-    height: 71px;
-    left: 0px;
-    top: 0px;
-    background: #756060;
-    border-radius: 1px;
-}
-
-#modal-heading{
-    font-family: 'Italiana';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 28px;
-    line-height: 21px;
-    color: #000000;
-}
-
-#modal-text{
-    font-family: 'Italiana';
-    font-weight: normal;
-    font-size: 15px;
-    color: #000000;
-}
-
-#modal-textfield{
-    width: 332px;
-    height: 4px;
-    background: #D9D9D9;
-    border-radius: 10px;
-}
-
-#modal-button{
-    width: 78px;
-    height: 27px;
-    background: #FDE66B;
-    font-family: 'Italiana';
-    font-weight: 600;
-    color: #000000;
-    font-size: 12px;
-    margin-left: 20px;
-    margin-right: 20px;
-    text-transform: none;
 }
