--- a/frontend/src/splashpage.css
+++ b/frontend/src/splashpage.css
@@ -560,3 +560,49 @@ input {
     font-size: 25pt;
     justify-content: center;
 }
+
+#modal-top{
+    position: absolute;
+    width: 423px;
+    height: 71px;
+    left: 0px;
+    top: 0px;
+    background: #756060;
+    border-radius: 1px;
+}
+
+#modal-heading{
+    font-family: 'Italiana';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 28px;
+    line-height: 21px;
+    color: #000000;
+}
+
+#modal-text{
+    font-family: 'Italiana';
+    font-weight: normal;
+    font-size: 15px;
+    color: #000000;
+}
+
+#modal-textfield{
+    width: 332px;
+    height: 4px;
+    background: #D9D9D9;
+    border-radius: 10px;
+}
+
+#modal-button{
+    width: 78px;
+    height: 27px;
+    background: #FDE66B;
+    font-family: 'Italiana';
+    font-weight: 600;
+    color: #000000;
+    font-size: 12px;
+    margin-left: 20px;
+    margin-right: 20px;
+    text-transform: none;
+}
