--- a/frontend/src/splashpage.css
+++ b/frontend/src/splashpage.css
@@ -72,6 +72,19 @@ body {
     border-radius: 5px;
 }
 
+#mapBoxEdit {
+    box-sizing: border-box;
+    position: relative;
+    width: 76%;
+    height: 50%;
+    left: 15%;
+    top: 10%;
+    background: rgba(217, 217, 217, 0.78);
+    /* border: 1px solid #000000; */
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;   
+}
+
 #statusBox {
     box-sizing: border-box;
     position: absolute;
@@ -79,6 +92,15 @@ body {
     height: 30%;
     left: 2%;
     top: 40%;
+}
+
+#statusBoxEdit{
+    box-sizing: border-box;
+    position: absolute;
+    width: 76%;
+    height: 0px;
+    left: 15%;
+    top: 8%;
 }
 
 #mapContainer {
@@ -559,6 +581,8 @@ input {
     width: 100%;
     height: 10%;
     background: rgba(217, 217, 217, 0.78);
+    font-family: 'Italiana', serif;
+    font-weight: 800;
     color: black;
     display: flex;
     align-items: center;
