--- a/frontend/src/splashpage.css
+++ b/frontend/src/splashpage.css
@@ -574,6 +574,81 @@ input {
     display: none;
 }
 
+#editBox {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 12%;
+    background: #756060;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+#map-edit-title{
+    position: relative;
+    font-family: 'Italiana', serif;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 2.9vh;
+    color: rgba(236, 242, 255, 1);
+    margin-bottom: 1%;
+    top: 5%;
+    left: 25%;
+}
+
+#map-edit-title{
+    position: relative;
+    font-family: 'Italiana', serif;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 2.9vh;
+    color: rgba(236, 242, 255, 1);
+    margin-bottom: 1%;
+    top: 5%;
+    left: 25%;
+}
+
+#edit-line {
+    position: absolute;
+    width: 80%;
+    height: 0px;
+    left: 9%;
+    top: 12%;
+    border: 1px solid #000000;
+}
+
+#editPanel {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+    margin-left: 15px;
+}
+
+#edit-line2 {
+    position: absolute;
+    width: 80%;
+    height: 0px;
+    left: 9%;
+    top: 63%;
+    border: 1px solid #000000;
+}
+
+#publishButton {
+    position: absolute;
+    width: 75%;
+    height: 3%;
+    left: 10%;
+    top: 964px;
+    background: #FDE66B;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+}
+
 #map-statusbar {
     position: absolute;
     left: 0%;
