--- a/frontend/src/splashpage.css
+++ b/frontend/src/splashpage.css
@@ -27,7 +27,8 @@ body {
 #homePageBackground {
     position: relative;
     width: 100%;
-    height: 1024px;
+    /* height: 1024px; */
+    height: 966px;
     background: #ECF2FF;
 }
 
@@ -82,7 +83,7 @@ body {
     background: rgba(217, 217, 217, 0.78);
     /* border: 1px solid #000000; */
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;   
+    border-radius: 5px;
 }
 
 #statusBox {
@@ -94,7 +95,7 @@ body {
     top: 40%;
 }
 
-#statusBoxEdit{
+#statusBoxEdit {
     box-sizing: border-box;
     position: absolute;
     width: 76%;
@@ -586,7 +587,7 @@ input {
     flex-direction: column;
 }
 
-#map-edit-title{
+#map-edit-title {
     position: relative;
     font-family: 'Italiana', serif;
     font-style: normal;
@@ -598,7 +599,7 @@ input {
     left: 25%;
 }
 
-#map-edit-title{
+#map-edit-title {
     position: relative;
     font-family: 'Italiana', serif;
     font-style: normal;
