--- a/frontend/src/splashpage.css
+++ b/frontend/src/splashpage.css
@@ -639,12 +639,21 @@ input {
     border: 1px solid #000000;
 }
 
+#edit-line3 {
+    position: absolute;
+    width: 80%;
+    height: 0px;
+    left: 9%;
+    top: 76%;
+    border: 1px solid #000000;
+}
+
 #publishButton {
     position: absolute;
     width: 75%;
-    height: 3%;
+    height: 5%;
     left: 10%;
-    top: 964px;
+    top: 80%;
     background: #FDE66B;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
