--- a/frontend/src/splashpage.css
+++ b/frontend/src/splashpage.css
@@ -509,48 +509,59 @@ input {
 #guestButton {
 
     box-sizing: border-box;
-
     position: absolute;
     width: 247px;
     height: 70px;
     left: 184px;
     top: 550px;
-
     background: #E5D1FA;
     border: 1px solid #000000;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
+    color: black;
+    transition: background 0.9s ease, transform 0.5s ease;
+}
+
+#guestButton:hover {
+    background: rgba(117, 96, 96, 0.75);
+    transform: scale(1.05);
 }
 
 #logButton {
-
     position: absolute;
     width: 247px;
     height: 70px;
     left: 184px;
     top: 650px;
-
     background: #E5D1FA;
     border: 1px solid #000000;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
+    transition: background 0.9s ease, transform 0.5s ease;
 }
 
+#logButton:hover {
+    background: rgba(117, 96, 96, 0.75);
+    transform: scale(1.05);
+}
 
 #regButton {
-
     box-sizing: border-box;
-
     position: absolute;
     width: 247px;
     height: 70px;
     left: 184px;
     top: 750px;
-
     background: #E5D1FA;
     border: 1px solid #000000;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
+    transition: background 0.9s ease, transform 0.5s ease;
+}
+
+#regButton:hover {
+    background: rgba(117, 96, 96, 0.75);
+    transform: scale(1.05);
 }
 
 #globeLogo {
