Changed spacing of MapCard

--- a/frontend/src/splashpage.css
+++ b/frontend/src/splashpage.css
@@ -273,7 +273,8 @@ img {
     font-style: normal;
     font-weight: 500;
     font-size: 2.8vh;
-    left: 3%;
+    top: 5%;
+    left: 4%;
     margin-bottom: 1%;
 }
 
