--- a/frontend/src/splashpage.css
+++ b/frontend/src/splashpage.css
@@ -28,7 +28,13 @@ body {
     position: relative;
     width: 100%;
     height: 1024px;
-    /* height: 966px; */
+    background: #ECF2FF;
+}
+
+#mapPageBackground {
+    position: absolute;
+    width: 100%;
+    height: 100%;
     background: #ECF2FF;
 }
 
