site should work again

--- a/frontend/src/splashpage.css
+++ b/frontend/src/splashpage.css
@@ -16,6 +16,7 @@ body {
     margin: 0;
 }
 
+
 #splashScreenBackground {
     position: relative;
     width: 100%;
@@ -761,6 +762,6 @@ input {
     font-weight: 900;
 }
 
-.uploadInput {
-    justify-content: right;
-  }
+/* #commentText {
+    
+} */
