--- a/frontend/src/splashpage.css
+++ b/frontend/src/splashpage.css
@@ -200,13 +200,14 @@ img {
     font-family: 'Italiana', serif;
     font-style: normal;
     font-weight: 900;
-    font-size: 3vw;
+    font-size: 2.5vw;
     text-align: left;
     margin-left: 10px;
     top: 2%;
     white-space: nowrap;
-    white-space: normal;
     display: block;
+    overflow: hidden; /* Hides any overflow text */
+    text-overflow: ellipsis; 
     /* z-index: 1; */
 }
 
