--- a/frontend/src/splashpage.css
+++ b/frontend/src/splashpage.css
@@ -244,7 +244,7 @@ img {
     width: 257px;
     height: 330px;
     overflow: hidden;
-    background: #E7EDFA;
+    background: #BDCCEC;
     border-radius: 5px;
     transition: background 0.8s ease, transform 0.5s ease;
 }
